# embedded_practice

./: README.md
cube_stm32/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  cube_stm32.ioc  cube_stm32.xml  stm32f103vetx_cmsis_dap.cfg
cube_stm32/Docs/: backup.txt
cube_stm32/User/: common_inc.h  func_test.c  func_test.h  main.cpp  system_data.c  system_data.h
embedded_basic/: embedded_utils.h  test.c
embedded_design_pattern/1_1_1 singleton/: CMakeLists.txt  Sensor.c  Sensor.h  main.c
embedded_design_pattern/1_2_4 subclass/: CMakeLists.txt  cachedqueue.c  cachedqueue.h  main.c  queue.c  queue.h
esp_start/: CMakeLists.txt  note.md  partitions.csv  sdkconfig  sdkconfig.old  start_esp.bat
esp_start/main/: CMakeLists.txt  Kconfig.projbuild  esp_start.c
esp_start/main/html/: setting.html
esp_start/main/include/: ds_system_data.h  ds_tests.h
esp_start/main/include/data/: ds_data_mess.h  ds_data_num.h
esp_start/main/include/draw/: ds_font.h  ds_paint.h
esp_start/main/include/driver/: ds_screen.h
esp_start/main/include/fs/: ds_spiffs.h
esp_start/main/include/hal/: ds_adc.h  ds_gpio.h  ds_nvs.h  ds_pwm.h  ds_timer.h  ds_uart.h
esp_start/main/include/net/: ds_http_request.h  ds_http_server.h  ds_wifi_ap.h  ds_wifi_ap_sta.h  ds_wifi_scan.h  ds_wifi_sta.h
esp_start/main/include/ui/: ds_ui_common.h  ds_ui_messpage.h  ds_ui_page_manage.h  ds_ui_settingpage.h  ds_ui_timepage.h  ds_ui_tomatopage.h
esp_start/main/src/: ds_system_data.c  ds_tests.c
esp_start/main/src/data/: ds_data_num.c
esp_start/main/src/draw/: ds_font.c  ds_paint.c
esp_start/main/src/driver/: ds_ft6336.c  ds_screen.c
esp_start/main/src/fs/: ds_spiffs.c
esp_start/main/src/hal/: ds_adc.c  ds_gpio.c  ds_i2c.c  ds_nvs.c  ds_pwm.c  ds_spi.c  ds_timer.c  ds_uart.c
esp_start/main/src/net/: ds_http_request.c  ds_http_server.c  ds_wifi_ap.c  ds_wifi_ap_sta.c  ds_wifi_scan.c  ds_wifi_sta.c
esp_start/main/src/ui/: ds_ui_messpage.c  ds_ui_page_manage.c  ds_ui_settingpage.c  ds_ui_timepage.c  ds_ui_tomatopage.c
(+31 files in other folders)
